--- a/admin.html
+++ b/admin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="myApp">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,9 +12,11 @@
 
     <link rel="stylesheet" href="css/admin-style.css">
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+
   </head>
 
-  <body>
+  <body ng-controller="myController">
 
     <div class="container">
         <h1>Markdown HTML Form</h1>
@@ -28,7 +30,7 @@
         <form>
             <!-- Edit markdown here! -->
             <input class="titleField" placeholder="Title"></input>
-            <textarea class="mdhtmlform-md">## Write markdown in the textarea!</textarea>
+            <textarea class="mdhtmlform-md">{{ textfieldContent }}</textarea>
             <br /><br />
             <!-- Display converted html here! -->
             <div class="mdhtmlform-html"></div>
