Did some amazing feeling refactoring

--- a/index.html
+++ b/index.html
@@ -81,159 +81,12 @@
         <a href="#">Back to top</a>
 
         <p> Last updated: April 2015 </p>
-
     </footer>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-
-    <script src="js/vendor/jquery-1.9.1.min.js"></script>
-
-
     <!-- load firebase! -->
     <script src='https://cdn.firebase.com/js/client/2.0.4/firebase.js'></script>
-    <script>
-        function clickTab(href) {
-          $('ul.tabs li a').click(function(){
-            var tab_id = $(this).parent().attr('data-tab');
-
-            $('ul.tabs li').removeClass('current');
-            $('.tab-content').removeClass('current');
-
-            $(this).parent().addClass('current');
-            $("#"+tab_id).addClass('current');
-            })
-          $('[href=#' + href.split("#")[1] + ']').click();
-        }
-
-      function submitComment(dataRef, commentField) {
-        var name = commentField.prev().val()
-        var comment = commentField.val();
-        dataRef.push({name: name, comment: comment});
-      }
-
-
-      // Helper to load content
-      function content(key, val) {
-        var post = "<div class=\"content-card\">"
-        // Post header
-        post += "<div class=\"content-header\">"
-        post += "<h3>" + val["title"] + "</h3>"
-        post += "<p>" + val["date"] + "</p>"
-        post += "</div>"
-        
-        // Post content
-        post += "<div class=\"panel-body\">"
-        post += "<p>" + val["post"] + "</p>"
-        post += "</div>"
-        
-        // Display comments - will get populated
-        post += "<div class=\"commentContainer\" id=\"" + key + "-comments\"> </div>"
-
-        // Comment form
-        post += "<label>Leave a comment:</label>"
-        post += "<input type=\"name\" placeholder=\"Matti Meikäläinen\">"
-        post += "<textarea class=\"u-full-width\" placeholder=\"Awesome article!\" id=\"" + key + "-commentInput\"></textarea>"
-
-        post += "</div>"
-        return post;
-      }
-
-      // Make the urls work
-      $(document).ready(function(){
-        clickTab(window.location.href);
-      })
-
-      // Load posts from firebase
-      var ref = new Firebase("https://arkadyark.firebaseio.com");
-
-      // Simple hit counter
-      var hits = ref.child("hits")
-      hits.once("value", function(snapshot) {
-        var numHits = snapshot.val()
-        ref.update({hits:numHits+1});
-      })
-
-      // Load content
-      var blogs = ref.child("blog-posts")
-      blogs.on("child_added", function(snapshot) {
-        var key = snapshot.key()
-        var val = snapshot.val()
-        $("#blog-posts-div").prepend(content(key, val));
-                  var dataRef = blogs.child(key).child("comments")
-          dataRef.on("child_added", function(snapshot) {
-            var commentsDiv = $("#" + key + "-comments")
-            var commentVal = snapshot.val()
-            var name = commentVal["name"]
-            var comment = commentVal["comment"]
-            var commentHtml = '<p><b>' + name + ':</b>'
-            commentHtml += ' ' + comment + '</p>'
-            commentsDiv.prepend($(commentHtml))
-          })
-        // Bind the comment field to a listener for each post
-        $("#" + key + "-commentInput").keyup(function (e) {
-          // Submit comment on enter
-          if (e.keyCode == 13) {
-            submitComment(dataRef, $(this))
-            $(this).prev().val('')
-            $(this).val('')
-          }
-        });
-      });
-
-
-      var projects = ref.child("project-posts")
-      projects.on("child_added", function(snapshot) {
-        var key = snapshot.key()
-        var val = snapshot.val()
-        $("#project-posts-div").prepend(content(key, val))
-                  var dataRef = projects.child(key).child("comments")
-            dataRef.on("child_added", function(snapshot) {
-            var commentsDiv = $("#" + key + "-comments")
-            var commentVal = snapshot.val()
-            var name = commentVal["name"]
-            var comment = commentVal["comment"]
-            var commentHtml = '<p><b>' + name + ':</b>'
-            commentHtml += ' ' + comment + '</p>'
-            commentsDiv.prepend($(commentHtml))
-          })
-        // Bind the comment field to a listener for each post
-        $("#" + key + "-commentInput").keyup(function (e) {
-          // Submit comment on enter
-          if (e.keyCode == 13) {
-            submitComment(dataRef, $(this))
-            $(this).prev().val('')
-            $(this).val('')
-          }
-        });
-      });
-
-      var interests = ref.child("interest-posts")
-      interests.on("child_added", function(snapshot) {
-        var key = snapshot.key()
-        var val = snapshot.val()
-        $("#interest-posts-div").prepend(content(key, val))
-        var dataRef = interests.child(key).child("comments")
-        dataRef.on("child_added", function(snapshot) {
-          var commentsDiv = $("#" + key + "-comments")
-          var commentVal = snapshot.val()
-          var name = commentVal["name"]
-          var comment = commentVal["comment"]
-          var commentHtml = '<p><b>' + name + ':</b>'
-          commentHtml += ' ' + comment + '</p>'
-          commentsDiv.prepend($(commentHtml))
-        })
-
-        // Bind the comment field to a listener for each post
-        $("#" + key + "-commentInput").keyup(function (e) {
-          // Submit comment on enter
-          if (e.keyCode == 13) {
-            submitComment(dataRef, $(this))
-            $(this).prev().val('')
-            $(this).val('')
-          }
-        });
-      });
-    </script>
+    <script src='js/app.js'></script>
   </body>
 </html>
