--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
         <img src="img/bg.png" id="background">
 
-        <div class="header">
+        <div id="header">
           <h1 class="title"><a href="" onClick='clickTab("#about")'>Arkady</a></h1>
           <p class="subtitle">Welcome to my little piece of the internet.</p>
           <ul class="tabs">
