Added a shoutout to dad

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div id="header">
           <h1 class="title"><a href="" onClick='clickTab("#about")'>Arkady</a></h1>
-          <p class="subtitle">Welcome to my little piece of the internet.</p>
+          <p class="subtitle"><a href="http://www.www3.reocities.com/SiliconValley/heights/2305/">Welcome to my place in the Web</a></p>
           <ul class="tabs">
             <li class="tab-link current" data-tab="about">
               <a href="#about"> About me </a>
