Forgot to include firebase

--- a/visualizations/chess/index.html
+++ b/visualizations/chess/index.html
@@ -12,6 +12,7 @@
     <p>The size of the circles drawn represents the frequency of the move.</p>
     <p>Chess games taken from <a href="http://www.top-5000.nl/pgn.htm">millionbase</a></p>
     <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src='https://cdn.firebase.com/js/client/2.0.4/firebase.js'></script>
     <script type="text/javascript" charset="utf-8">
 
     // Main Firebase reference, lots of children from here
