Made edges thinner

--- a/visualizations/rap_network/attempt_1/index.html
+++ b/visualizations/rap_network/attempt_1/index.html
@@ -44,7 +44,7 @@ svg {
 </style>
 <body>
     <div id="top">
-        <h2>The Oracle of <span style="">Yeezy</span></h1>
+        <h2>Rap Ne<span style="color:blue">twerk</span></h1>
         <p>Made by <a href="/#about"> Arkady Arkhangorodsky </a></p>
     </div>
     <div id="main-content">
