--- a/visualizations/rap_network/attempt_2/index.html
+++ b/visualizations/rap_network/attempt_2/index.html
@@ -103,7 +103,7 @@ var color = d3.scale.category20();
             .enter().append("path")
             .attr("class", "link")
             .attr("stroke-width", function(d) {
-                return Math.sqrt(Math.sqrt(d[3]))
+                return Math.sqrt(d[3])/3
             })
 
         var node = svg.selectAll(".node")
