--- a/index.html
+++ b/index.html
@@ -1,92 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Personal site with my thoughts">
-    <meta name="author" content="Arkady Arkhangorodsky">
-    <meta property="og:description" name="description" content="Personal Website for Arkady Arkhangorodsky">
-    <meta name="keywords" content="Student, engineering, UofT, Toronto, Programming, Hackathons, Arsenal">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Personal site with my thoughts">
+        <meta name="author" content="Arkady Arkhangorodsky">
+        <meta property="og:description" name="description" content="Personal Website for Arkady Arkhangorodsky">
+        <meta name="keywords" content="Student, engineering, UofT, Toronto, Programming, Hackathons, Arsenal">
 
-    <link rel="icon" href="img/favicon.ico">
+        <link rel="icon" href="img/favicon.ico">
 
-    <title>Arkady Arkhangorodsky</title>
-    <link href="css/style.css" rel="stylesheet">
-  </head>
+        <title>Arkady Arkhangorodsky</title>
+        <link href="css/style.css" rel="stylesheet">
+    </head>
 
-  <body>
+    <body>
         <img src="img/bg.png" id="background">
 
         <div id="header">
-          <h1 class="title"><a href="" onClick='clickTab("#about")'>Arkady</a></h1>
-          <p class="subtitle"><a href="http://www.www3.reocities.com/SiliconValley/heights/2305/">Welcome to my place in the Web</a></p>
-          <ul class="tabs">
-            <li class="tab-link current" data-tab="about">
-              <a href="#about"> About me </a>
-           </li>
-            <li class="tab-link" data-tab="thoughts">
-              <a href="#thoughts"> What I think </a>
-            </li>
-            <li class="tab-link" data-tab="projects">
-              <a href="#projects"> What I do </a>
-            </li>
-            <li class="tab-link" data-tab="interests">
-              <a href="#interests"> What I like </a>
-            </li>
-          </ul>
+            <h1 class="title"><a href="" onClick='clickTab("#about")'>Arkady</a></h1>
+            <p class="subtitle"><a href="http://www.www3.reocities.com/SiliconValley/heights/2305/">Welcome to my place in the Web</a></p>
+            <ul class="tabs">
+                <li class="tab-link current" data-tab="about">
+                    <a href="#about"> About me </a>
+                </li>
+                <li class="tab-link" data-tab="thoughts">
+                    <a href="#thoughts"> What I think </a>
+                </li>
+                <li class="tab-link" data-tab="projects">
+                    <a href="#projects"> What I do </a>
+                </li>
+                <li class="tab-link" data-tab="interests">
+                    <a href="#interests"> What I like </a>
+                </li>
+            </ul>
         </div>
 
         <div class="tab-content about current" id="about">
-          <h2 class="tab-title">About me</h2>
-          <div class="content-card">
-            <p> My name is Arkady ('R-kah-dee') Arkhangorodsky (nope). I'm a student in my first year of Engineering Science at the University of Toronto, interested in programming, music, history, people, robots, and a whole lot more. I like to play piano when I get the chance. </p>
-            <p> On this site you'll find my thoughts, projects, interests and more. I like to think that I have a lot of them. </p>
-            <p> I'm mostly using this as a sandbox to pick up some web development skills, so things will be changing here pretty constantly. </p>
-          </div>
+            <h2 class="tab-title">About me</h2>
+            <div class="content-card">
+                <p> My name is Arkady ('R-kah-dee') Arkhangorodsky (nope). I'm a student in my first year of Engineering Science at the University of Toronto, interested in programming, music, history, people, robots, and a whole lot more. I like to play piano when I get the chance. </p>
+                <p> On this site you'll find my thoughts, projects, interests and more. I like to think that I have a lot of them. </p>
+                <p> I'm mostly using this as a sandbox to pick up some web development skills, so things will be changing here pretty constantly. </p>
+            </div>
 
         </div>
 
         <div class="tab-content thoughts" id="thoughts">
-          <h2 class="tab-title">Thoughts</h2>
-          <div id="blog-posts-div"></div>
+            <h2 class="tab-title">Thoughts</h2>
+            <div id="blog-posts-div"></div>
         </div>
 
         <div class="tab-content projects" id="projects">
-          <h2 class="tab-title">Projects</h2>
-          <div id="project-posts-div"></div>
+            <h2 class="tab-title">Projects</h2>
+            <div id="project-posts-div"></div>
         </div>
 
         <div class="tab-content interests" id="interests">
-          <h2 class="tab-title">Interests</h2>
-          <div id="interest-posts-div"></div>
+            <h2 class="tab-title">Interests</h2>
+            <div id="interest-posts-div"></div>
         </div>
 
-    <footer class="blog-footer">
+        <footer class="blog-footer">
 
-        <div> 
-          <a href="http://www.github.com/arkadyark">
-            <img src="img/github.png"/>
-          </a>
+            <div> 
+                <a href="http://www.github.com/arkadyark">
+                    <img src="img/github.png"/>
+                </a>
 
-          <a href="http://www.facebook.com/ArkadyArkhangorodsky">
-            <img src="img/facebook.png"/>
-          </a>
+                <a href="http://www.facebook.com/ArkadyArkhangorodsky">
+                    <img src="img/facebook.png"/>
+                </a>
 
-          <a href="res/resume.pdf">
-            <img src="img/resume.png"/>
-          </a>
-        </div>
+                <a href="res/resume.pdf">
+                    <img src="img/resume.png"/>
+                </a>
+            </div>
 
-        <a href="#">Back to top</a>
+            <div class="elevator-button">
+                Back to top</div>
 
-        <p> Last updated: April 2015 </p>
-    </footer>
+            <p> Last updated: April 2015 </p>
+        </footer>
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <!-- load firebase! -->
-    <script src='https://cdn.firebase.com/js/client/2.0.4/firebase.js'></script>
-    <script src='js/app.js'></script>
-  </body>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <!-- load firebase! -->
+        <script src='https://cdn.firebase.com/js/client/2.0.4/firebase.js'></script>
+        <script src='js/app.js'></script>
+        <script src='js/elevator.js'></script>
+        <script>
+// Elevator script included on the page, already.
+
+window.onload = function() {
+    var elevator = new Elevator({
+        element: document.querySelector('.elevator-button'),
+        mainAudio: 'res/music/elevator-music.mp3',
+        endAudio: 'res/music/ding.mp3',
+        duration: 5000 // milliseconds
+    });
+}
+        </script>
+    </body>
 </html>
