--- a/visualizations/rap_network/attempt_4/index.html
+++ b/visualizations/rap_network/attempt_4/index.html
@@ -79,7 +79,7 @@ var color = d3.scale.category20();
     .attr("width", width)
     .attr("height", height);
 
-    d3.json("yeezified_network_2.json", function(error, graph) {
+    d3.json("network.json", function(error, graph) {
         var nodes = graph.nodes.slice(),
         links = [],
         bilinks = [];
@@ -89,13 +89,16 @@ var color = d3.scale.category20();
             t = nodes[link.target],
             i = {}; // intermediate node
             nodes.push(i);
-            links.push({source: s, target: i}, {source: i, target: t});
+            links.push({source: s, target: i, strength: link.value}, {source: i, target: t, strength: link.value});
             bilinks.push([s, i, t, link.value, link.songs]);
         });
 
         force
             .nodes(nodes)
             .links(links)
+            .linkStrength(function(d) {
+                return 2*Math.sqrt(d.strength);
+            })
             .start();
 
         var link = svg.selectAll(".link")
