Started on responsiveness

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         <img src="img/bg.png" id="background">
 
         <div id="header">
-            <h1 class="title"><a href="" onClick='clickTab("#about")'>Arkady</a></h1>
-            <p class="subtitle"><a href="http://www.www3.reocities.com/SiliconValley/heights/2305/">Welcome to my place in the Web</a></p>
+            <div id="titles">
+                <h1 class="title"><a href="" onClick='clickTab("#about")'>Arkady</a></h1>
+                <p class="subtitle"><a href="http://www.www3.reocities.com/SiliconValley/heights/2305/">Welcome to my place in the Web</a></p>
+            </div>
             <ul class="tabs">
                 <li class="tab-link current" data-tab="about">
                     <a href="#about"> About me </a>
@@ -33,6 +35,9 @@
                 </li>
                 <li class="tab-link" data-tab="interests">
                     <a href="#interests"> What I like </a>
+                </li>
+                <li class="tab-menu">
+                    <img src="img/br_down.png" alt="Show menu" />
                 </li>
             </ul>
         </div>
