Finished up the mobile stuff, fixed a problem with image sizing in cards

--- a/index.html
+++ b/index.html
@@ -37,7 +37,22 @@
                     <a href="#interests"> What I like </a>
                 </li>
                 <li class="tab-menu">
-                    <img src="img/br_down.png" alt="Show menu" />
+                    <img src="img/br_down.png" alt="Show menu" onClick='$(".mobile-tabs").slideToggle()'/>
+                </li>
+            </ul>
+
+            <ul class="mobile-tabs">
+                <li class="tab-link current" data-tab="about">
+                    <a href="#about"> About me </a>
+                </li>
+                <li class="tab-link" data-tab="thoughts">
+                    <a href="#thoughts"> What I think </a>
+                </li>
+                <li class="tab-link" data-tab="projects">
+                    <a href="#projects"> What I do </a>
+                </li>
+                <li class="tab-link" data-tab="interests">
+                    <a href="#interests"> What I like </a>
                 </li>
             </ul>
         </div>
