--- a/visualizations/rap_network/attempt_4/index.html
+++ b/visualizations/rap_network/attempt_4/index.html
@@ -41,11 +41,19 @@ svg {
     stroke: #bbb;
 }
 
+#threshold-slider {
+    width : 25%;
+}
+
 </style>
 <body>
     <div id="top">
-        <h2>The Oracle of <span style="">Yeezy</span></h1>
-        <p>Made by <a href="/#about"> Arkady Arkhangorodsky </a></p>
+        <div>
+            <h2>The Oracle of <span style="">Yeezy</span></h1>
+            <p>Made by <a href="/#about"> Arkady Arkhangorodsky </a></p>
+        </div>
+        <p> Collaboration threshold: <span id="threshold-label"></span> </p>
+        <div id="threshold-slider"></div>
     </div>
     <div id="main-content">
         <div id="sidebar">
@@ -56,7 +64,10 @@ svg {
             </div>
         </div>
     </div>
+
+    <link rel="stylesheet" href="/visualizations/rap_network/d3.slider.css" />
     <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="/visualizations/rap_network/d3.slider.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>
 
@@ -70,90 +81,102 @@ var yeezyPath = $("#path-to-yeezy")
 
 var color = d3.scale.category20();
 
-    var force = d3.layout.force()
-    .linkDistance(10)
-.linkStrength(2)
+var force = d3.layout.force()
     .size([width, height]);
 
     var svg = d3.select("#main-content").append("svg")
     .attr("width", width)
     .attr("height", height);
 
-    d3.json("network.json", function(error, graph) {
-        var nodes = graph.nodes.slice(),
-        links = [],
-        bilinks = [];
+    d3.json("yeezified_network.json", function(error, graph) {
+        d3.select('#threshold-slider').call(d3.slider()
+                .value(25)
+                .on("slide", function(evt, value) {
+                    makeGraph(graph, value);
+                }))
+        makeGraph(graph, 25);
+    })
 
-        graph.links.forEach(function(link) {
+function makeGraph(graph, value) {
+    svg.selectAll('*').remove();
+    var nodes = graph.nodes.slice(),
+    links = [],
+        bilinks = [];
+    d3.select("#threshold-label").html(Math.ceil(Math.pow(value/10, 2)));
+    var slider_threshold = Math.pow(value/10, 2);
+    graph.links.forEach(function(link) {
+        if (link.value > slider_threshold) {
             var s = nodes[link.source],
-            t = nodes[link.target],
+                t = nodes[link.target],
             i = {}; // intermediate node
             nodes.push(i);
-            links.push({source: s, target: i, strength: link.value}, {source: i, target: t, strength: link.value});
+            links.push({source: s, target: i, weight : link.value}, {source: i, target: t, weight: link.value});
             bilinks.push([s, i, t, link.value, link.songs]);
-        });
+        }
+    });
 
-        force
-            .nodes(nodes)
-            .links(links)
-            .linkStrength(function(d) {
-                return 2*Math.sqrt(d.strength);
-            })
-            .start();
+    force.linkStrength(function(d) {
+        return (1/d.weight^2);
+    })
 
-        var link = svg.selectAll(".link")
-            .data(bilinks)
-            .enter().append("path")
-            .attr("class", "link")
-            .attr("stroke-width", function(d) {
-                return Math.sqrt(d[3])/3
-            })
+    force
+        .nodes(nodes)
+        .links(links)
+        .start();
 
-        var node = svg.selectAll(".node")
-            .data(graph.nodes)
-            .enter().append("circle")
-            .attr("class", "node")
-            .attr("r", 5)
-            .style("fill", function(d) { return color(d.group); })
-            .call(force.drag);
+    var link = svg.selectAll(".link")
+        .data(bilinks)
+        .enter().append("path")
+        .attr("class", "link")
+        .attr("stroke-width", function(d) {
+            return Math.sqrt(d[3])/5
+        })
 
-        node.append("title")
-            .text(function(d) { return d.name; });
+    var node = svg.selectAll(".node")
+        .data(graph.nodes)
+        .enter().append("circle")
+        .attr("class", "node")
+        .attr("r", 4)
+        .style("fill", function(d) { return color(d.group); })
+        .call(force.drag);
 
-        node.on("mouseover", function(d) {
-            d3.select(this).attr("r", 7)
+    node.append("title")
+        .text(function(d) { return d.name; });
+
+    node.on("mouseover", function(d) {
+        d3.select(this).attr("r", 6)
             artistName.html(d.name)
             artistPicture.attr("src", d.image)
             yeezyNumber.html(d.yeezy_number)
             $.each(d.yeezy_path, function(key, value) {
                 var sentence = "<p>"
-                sentence += value.from
-                sentence += " and "
-                sentence += value.to
-                sentence += " collaborated on "
-                sentence += value.song
-                sentence += "</p>"
-                yeezyPath.append($(sentence))
+                    sentence += value.from
+                    sentence += " and "
+                    sentence += value.to
+                    sentence += " collaborated on "
+                    sentence += value.song
+                    sentence += "</p>"
+                    yeezyPath.append($(sentence))
             })
-        }).on("mouseout", function(d) {
-            d3.select(this).attr("r", 5)
+    }).on("mouseout", function(d) {
+        d3.select(this).attr("r", 4)
             artistName.html("Hover over an artist!")
             artistPicture.attr("src", "http://a5.mzstatic.com/us/r30/Purple1/v4/bc/8e/81/bc8e8110-9b14-5e5f-a6b7-9a6d18adac6f/icon320x320.jpeg")
             yeezyNumber.html("")
             yeezyPath.html("")
-        });
+    });
 
-        force.on("tick", function() {
-            link.attr("d", function(d) {
-                return "M" + d[0].x + "," + d[0].y
-                    + "S" + d[1].x + "," + d[1].y
-                    + " " + d[2].x + "," + d[2].y;
-            });
-            node.attr("transform", function(d) {
-                return "translate(" + d.x + "," + d.y + ")";
-            });
+    force.on("tick", function() {
+        link.attr("d", function(d) {
+            return "M" + d[0].x + "," + d[0].y
+                + "S" + d[1].x + "," + d[1].y
+                + " " + d[2].x + "," + d[2].y;
+        });
+        node.attr("transform", function(d) {
+            return "translate(" + d.x + "," + d.y + ")";
         });
     });
+}
 
     </script>
     <footer class="blog-footer">
