--- a/visualizations/rap_network/attempt_4/index.html
+++ b/visualizations/rap_network/attempt_4/index.html
@@ -3,6 +3,10 @@
 <link href="/css/style.css" rel="stylesheet">
 <style>
 
+html, body {
+    height : 100%;
+}
+
 #main-content {
     position : relative;
     width : 100%;
@@ -13,27 +17,37 @@
     border-bottom : solid;
 }
 
+.open-hand-cursor {
+    cursor : url(http://maps.gstatic.com/mapfiles/openhand_8_8.cur), default;
+}
+
+.closed-hand-cursor {
+    cursor : url(http://maps.gstatic.com/mapfiles/closedhand_8_8.cur), default;
+}
+
+.pointer-cursor {
+    cursor : pointer;
+}
+
 #artist-picture {
     width : 100%;
--webkit-box-shadow: 0px 7px 24px 0px rgba(0,0,0,0.75);
--moz-box-shadow: 0px 7px 24px 0px rgba(0,0,0,0.75);
-box-shadow: 0px 7px 24px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 7px 24px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 7px 24px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 7px 24px 0px rgba(0,0,0,0.75);
     margin-bottom : 1em;
 }
 
 #sidebar {
     width : 25%;
+    height : 610px;
     float : left;
     box-sizing : border-box;
     padding-right : 10px;
+    border-right : solid;
 }
 
 h6 {
     margin-bottom : 1rem;
-}
-
-svg {
-    border-left : solid;
 }
 
 .node {
@@ -97,15 +111,14 @@ svg {
         </div>
     </div>
     <div id="main-content" class="row">
-        <div id="sidebar" class="four columns">
+        <div id="sidebar" class="three columns">
             <h4 id="artist-name"> Hover over an artist! </h4>
             <img src="http://a5.mzstatic.com/us/r30/Purple1/v4/bc/8e/81/bc8e8110-9b14-5e5f-a6b7-9a6d18adac6f/icon320x320.jpeg" alt="" id="artist-picture"/>
             <p>Yeezy Number: <span id="yeezy-number"></span></p>
             <div id="path-to-yeezy">
             </div>
         </div>
-        <div id="svg-wrapper" class="eight columns">
-        </div>
+        <div id="svg-wrapper"></div>
     </div>
 
     <link rel="stylesheet" href="/visualizations/rap_network/d3.slider.css" />
@@ -153,6 +166,13 @@ var force = d3.layout.force().size([width, height]);
 var svg = d3.select("#svg-wrapper").append("svg")
     .attr("width", width)
     .attr("height", height)
+    .attr("class", "open-hand-cursor");
+
+svg.on("mousedown.drag", function() {
+    svg.attr("class", "closed-hand-cursor");
+}).on("mouseup.drag", function() {
+    svg.attr("class", "open-hand-cursor");
+})
 
 var vis = svg.append('svg:g')
 
@@ -237,6 +257,7 @@ function makeGraph(graph, value, artist_name) {
         .text(function(d) { return d.name; });
 
     node.on("mouseover", function(d) {
+        svg.attr("class", "pointer-cursor")
         d3.select(this).attr("r", 6)
             artistName.html(d.name)
             artistPicture.attr("src", d.image)
@@ -263,6 +284,7 @@ function makeGraph(graph, value, artist_name) {
                     })
             }
     }).on("mouseout", function(d) {
+        svg.attr("class", "open-hand-cursor")
         d3.select(this).attr("r", 4)
             artistName.html("Hover over an artist!")
             artistPicture.attr("src", "http://a5.mzstatic.com/us/r30/Purple1/v4/bc/8e/81/bc8e8110-9b14-5e5f-a6b7-9a6d18adac6f/icon320x320.jpeg")
